Dont set height to auto if an img tag has an height
Since there is no way to override height once it has been set (to make it behave as the same way as if no height attribute has been set at all), it would be less opinionated to only set height: auto if an height attribute on the img tag doesnt exists.

--- a/src/css/preflight.css
+++ b/src/css/preflight.css
@@ -349,12 +349,16 @@ object {
 }
 
 /*
-Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
+Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14). Only use height auto if height hasnt been set on the img tag
 */
 
 img,
 video {
   max-width: 100%;
+}
+
+video:not([height]),
+img:not([height]){
   height: auto;
 }
 
