--- a/src/css/base.css
+++ b/src/css/base.css
@@ -5,7 +5,12 @@
 }
 
 html {
+  height: 100%;
   font-feature-settings: 'cv02', 'cv03', 'cv04', 'cv11';
+}
+
+body {
+  min-height: 100%;
 }
 
 abbr[title] {
