--- a/tests/import-syntax.test.css
+++ b/tests/import-syntax.test.css
@@ -17,6 +17,8 @@ h1 {
   --tw-pan-y: ;
   --tw-pinch-zoom: ;
   --tw-scroll-snap-strictness: proximity;
+  --tw-gap-x: 0;
+  --tw-gap-y: 0;
   --tw-ordinal: ;
   --tw-slashed-zero: ;
   --tw-numeric-figure: ;
