Update [type] selectors to target inputs instead of buttons
 - Thinking about the reasoning behind the update for v3, I think this would work well for keeping styling the same between these two things (inputs of certain types and buttons), while at the same time not applying more specificity to buttons than intended (and accidentally targeting buttons since they overlap in usage of the type attribute).

--- a/src/css/preflight.css
+++ b/src/css/preflight.css
@@ -194,9 +194,9 @@ button {
 2. Remove default button styles.
 */
 
-[type='button'],
-[type='reset'],
-[type='submit'] {
+input[type='button'],
+input[type='reset'],
+input[type='submit'] {
   -webkit-appearance: button; /* 1 */
   background-color: transparent; /* 2 */
   background-image: none; /* 2 */
