Add touch variants

--- a/tests/variants.test.css
+++ b/tests/variants.test.css
@@ -833,6 +833,18 @@
     background-color: rgb(253 224 71 / var(--tw-bg-opacity));
   }
 }
+@media (hover: none) {
+  .touch\:bg-yellow-300 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(253 224 71 / var(--tw-bg-opacity));
+  }
+}
+@media (hover: hover) {
+  .no-touch\:bg-yellow-300 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(253 224 71 / var(--tw-bg-opacity));
+  }
+}
 .dark .dark\:shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
