WIP: New `@apply` logic
use `lightningcss` and `prettier` for `toMatchFormattedCss`

Lightning CSS applies some optimizations and prettier ensures that the
output is always formatted in the same way.

In a future version, we will be using Lightning CSS to apply
optimizations like handling the nesting, optimizing selectors, sorting
declarations, simplifying colors and so on.

To guarantee that we have the same output in both the normal version and
OXIDE version, we can apply lightningcss in our tests so that it always
produces correct results in both version with the same optimizations
applied.

This also aliases `toMatchCss` to `toMatchFormattedCss` so that we can
guarantee the same output. This has a small caveat where `lightningcss`
is pretty strict. It will complain about `@media screen(md) {}` for
example. This is correct because it is not valid CSS, but we eventually
take care of it.
In this case, we will catch the error and use prettier instead (since
this should only happen in tests that doesn't use end-to-end tests, but
uses a more specialized test instead). If prettier still finds an error,
we will ensure to throw the original error.

Eventually, all the "lower" level tests, should probably become higher
level end-to-end tests. But let's do everything step by step!

--- a/tests/arbitrary-values.test.css
+++ b/tests/arbitrary-values.test.css
@@ -685,13 +685,7 @@
 .bg-\[image\:var\(--value\)\2c var\(--value\)\] {
   background-image: var(--value), var(--value);
 }
-.bg-\[linear-gradient\(\#eee\2c
-  \#fff\)\2c
-  conic-gradient\(red\2c
-  orange\2c
-  yellow\2c
-  green\2c
-  blue\)\] {
+.bg-\[linear-gradient\(\#eee\, \#fff\)\, conic-gradient\(red\, orange\, yellow\, green\, blue\)\] {
   background-image: linear-gradient(#eee, #fff), conic-gradient(red, orange, yellow, green, blue);
 }
 .bg-\[linear-gradient\(\#eee\2c \#fff\)\] {
