Use logical properties for space/divide in Oxide

--- a/tests/kitchen-sink.test.css
+++ b/tests/kitchen-sink.test.css
@@ -95,9 +95,9 @@
   font-weight: 400;
 }
 .list > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .nested {
   .example {
