--- a/tests/arbitrary-values.oxide.test.css
+++ b/tests/arbitrary-values.oxide.test.css
@@ -195,7 +195,7 @@
   min-width: 3.23rem;
 }
 .min-w-\[calc\(1-\(\(12-3\)\*0\.5\)\)\] {
-  min-width: calc(1 - ((12 - 3) * 0.5));
+  min-width: -3.5px;
 }
 .min-w-\[calc\(1-\(var\(--something\)\*0\.5\)\)\] {
   min-width: calc(1 - (var(--something) * 0.5));
@@ -685,13 +685,7 @@
 .bg-\[image\:var\(--value\)\2c var\(--value\)\] {
   background-image: var(--value), var(--value);
 }
-.bg-\[linear-gradient\(\#eee\2c
-  \#fff\)\2c
-  conic-gradient\(red\2c
-  orange\2c
-  yellow\2c
-  green\2c
-  blue\)\] {
+.bg-\[linear-gradient\(\#eee\,\#fff\)\,conic-gradient\(red\,orange\,yellow\,green\,blue\)\] {
   background-image: linear-gradient(#eee, #fff), conic-gradient(red, orange, yellow, green, blue);
 }
 .bg-\[linear-gradient\(\#eee\2c \#fff\)\] {
